--- a/src/Box.css
+++ b/src/Box.css
@@ -14,8 +14,8 @@
 }
 
 .Box h1 {
-  font-size: 24px;
-  font-weight: 100;
+  font-size: 29px;
+  font-weight: bold;
   line-height: 29px;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .Box li {
-  font-size: 17px;
+  font-size: 20px;
   font-weight: 100;
   line-height: 19px;
   list-style: none;
@@ -46,7 +46,7 @@
 
 .Box .unit {
   color: #085f63;
-  font-size: 14px;
+  font-size: 23px;
   font-weight: 400;
   position: relative;
   top: -32px;
